[package]
name = "publish-action"
version = "0.1.10"
edition = "2021"
license = "MIT"
description = "Auto Publish Cargo with Github Action"

[[bin]]
name = "publish-action"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "0.11.5"
crates_io_api = "0.8.0"
dotenv = "0.15.0"
futures = "0.3.21"
thiserror = "1.0"
json = "0.12.4"
#openssl = "0.10.40"
reqwest = {version ="0.11.10",features= ["blocking","json"]}
tokio = { version = "1", features = ["full"] }
version-compare = "0.1.0"
