[package]
authors = ["tu6ge <772364230@qq.com>"]
description = "Auto Publish Cargo with Github Action"
edition = "2021"
keywords = ["github-action", "cargo", "CI-CD", "publish"]
license = "MIT"
name = "publish-action"
repository = "https://github.com/tu6ge/publish-action"
version = "0.3.0"

[[bin]]
name = "publish-action"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
cargo = "0.75.0"
futures = "0.3.21"
serde_json = "1.0.95"
thiserror = "1.0"
#openssl = "0.10.40"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = "1.0"
serde_yaml = "0.9"

[dev-dependencies]
dotenv = "0.15.0"
tempfile = "3.5.0"
